stop gap for pages and router

--- a/src/components/footerAd/FooterAd.css
+++ b/src/components/footerAd/FooterAd.css
@@ -1,5 +1,5 @@
-#banner-ad {
-  height: 10rem;
+#footer-ad {
+  height: 6rem;
   display: flex;
   justify-content: center;
   align-items: center;
