--- a/src/components/heroCard/HeroCard.css
+++ b/src/components/heroCard/HeroCard.css
@@ -6,20 +6,24 @@
 #conduct-p {
   border: 1px solid #4e8234;
   border-radius: 10px;
-  padding: 20px 0;
+  padding: 2px;
+  font-size: 14px;
 }
 
 #welcome {
   margin-top: 2rem;
-  padding: 2rem 0;
+  padding-top: 2rem;
   border: 4px solid #4e8234;
   border-radius: 20px;
   line-height: 22px;
 }
 
 #hero-nav {
+  list-style: none;
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 2px 0;
+  margin: 10px 2px 2px;
+  background-color: var(--header-green);
+  border-radius: 0 0 15px 15px;
 }
